<resources>
    <string name="app_name">CopticsMedia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Jesus was telling them that they need to pray continuously and not to be discouraged</string>
    <string name="let_us_pray">Let\'s Pray</string>
    <string name="title_media_list">Medias</string>
    <string name="title_media_detail">Media Detail</string>
    <string name="agpya">Agpeya</string>
    <string name="kholagy">Kholagy</string>
    <string name="ebsalmodia">Ebsalmodia</string>
    <string name="agpya_description">Daily hours prays</string>
    <string name="kholagy_description">The book of Liturgy</string>
    <string name="ebsalmodia_description">The book of midnight praises</string>
    <string name="title_activity_root">RootActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task_previewer">TaskPreviewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Text">text</string>


    <string-array name="languages">
        <item>Arabic</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string name="title_activity_contents_preview">ContentsPreview</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="a">A</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_content_list">Contents</string>
    <string name="title_content_detail">Content Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="please_select_your_language_preference">Please select your language preference</string>
    <string name="language">Language</string>
    <string name="update">Update</string>
    <string name="arabic">Arabic</string>
    <string name="coptic">Coptic</string>
    <string name="arabic_coptic">Arabic-Coptic</string>
    <string name="title_activity_bible_detail">BibleDetailActivity</string>
    <string name="title_agpeyapray_list">AgpeyaPrayes</string>
    <string name="title_agpeyapray_detail">AgpeyaPray Detail</string>
    <string name="title_ebsalmodiapray_list">EbsalmodiaPrays</string>
    <string name="title_ebsalmodiapray_detail">EbsalmodiaPray Detail</string>
    <string name="no_network_connection_toast">no network connection</string>
</resources>
