<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#ffffff">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/task_row_icon"
        android:src="@drawable/gold_logo"

        android:contentDescription="@string/app_name"
        android:layout_below="@+id/task_row_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agpya_description"
        android:id="@+id/task_row_description"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/task_row_icon"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/agpya"
        android:id="@+id/task_row_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>